--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.21.0"
+openssl = "0.10.52"
+portpicker = "0.1.1"
+prost = "0.11.9"
+rand = "0.8.5"
+zeroconf = "0.10.5"
