--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.21.0"
+bytes = "1.4.0"
 pnet = "0.33.0"
 portpicker = "0.1.1"
 prost = "0.11.9"
-rand = "0.8.5"
+rand_old = { package = "rand", version = "0.7.0" }
+rand_new = { package = "rand", version = "0.8.5" }
 ring = { version = "0.16.20", features = ["std"] }
+x25519-dalek = "1.2.0"
 zeroconf = "0.10.5"
 
 [build-dependencies]
