--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ rand_new = { package = "rand", version = "0.8.5" }
 ring = { version = "0.16.20", features = ["std"] }
 x25519-dalek = "1.2.0"
 zeroconf = "0.10.5"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
 
 [build-dependencies]
 prost-build = "0.11.9"
