--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ x25519-dalek = "1.2.0"
 zeroconf = "0.10.5"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
+tracing-test = "0.2.4"
 
 [build-dependencies]
 prost-build = "0.11.9"
