--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ zeroconf = "0.10.5"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 tracing-test = "0.2.4"
+tokio = { version = "1.28.0", features = ["full"] }
 
 [build-dependencies]
 prost-build = "0.11.9"
