--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 tracing-test = "0.2.4"
 tokio = { version = "1.28.0", features = ["full"] }
+tokio-stream = { version = "0.1.14", features = ["full"] }
+async-stream = "0.3.5"
+futures-util = "0.3.28"
 
 [build-dependencies]
 prost-build = "0.11.9"
