--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1.28.0", features = ["full"] }
 tokio-stream = { version = "0.1.14", features = ["full"] }
 async-stream = "0.3.5"
 futures-util = "0.3.28"
+tokio-util = "0.7.8"
 
 [build-dependencies]
 prost-build = "0.11.9"
