--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ sha2 = "0.10.6"
 hkdf = { version = "0.12.3", features = ["std"] }
 hmac = { version = "0.12.1", features = ["std"] }
 cbc = { version = "0.1.2", features = ["std", "alloc"] }
+hex = "0.4.3"
 
 [build-dependencies]
 prost-build = "0.11.9"
