--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,21 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
 base64 = "0.21.0"
 bytes = "1.4.0"
 pnet = "0.33.0"
 portpicker = "0.1.1"
 prost = "0.11.9"
-rand_old = { package = "rand", version = "0.7.0" }
-rand_new = { package = "rand", version = "0.8.5" }
-x25519-dalek = "1.2.0"
 zeroconf = "0.10.5"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 tracing-test = "0.2.4"
 tokio = { version = "1.28.0", features = ["full"] }
-tokio-stream = { version = "0.1.14", features = ["full"] }
-async-stream = "0.3.5"
 futures-util = "0.3.28"
 tokio-util = "0.7.8"
 aes = "0.8.2"
@@ -29,6 +25,7 @@ hkdf = { version = "0.12.3", features = ["std"] }
 hmac = { version = "0.12.1", features = ["std"] }
 cbc = { version = "0.1.2", features = ["std", "alloc"] }
 hex = "0.4.3"
+p256 = { version = "0.13.2", features = ["ecdh"] }
 
 [build-dependencies]
 prost-build = "0.11.9"
