--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,19 @@ prost = "0.11.9"
 zeroconf = "0.10.5"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
-tracing-test = "0.2.4"
 tokio = { version = "1.28.0", features = ["full"] }
-futures-util = "0.3.28"
 tokio-util = "0.7.8"
 aes = "0.8.2"
 sha2 = "0.10.6"
 hkdf = { version = "0.12.3", features = ["std"] }
 hmac = { version = "0.12.1", features = ["std"] }
 cbc = { version = "0.1.2", features = ["std", "alloc"] }
-hex = "0.4.3"
 p256 = { version = "0.13.2", features = ["ecdh"] }
+clap = { version = "4.3.0", features = ["derive"] }
 
 [build-dependencies]
 prost-build = "0.11.9"
+
+[dev-dependencies]
+hex = "0.4.3"
+tracing-test = "0.2.4"
