--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ zeroconf = "0.10.5"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 tokio = { version = "1.28.0", features = ["full"] }
-tokio-util = "0.7.8"
+tokio-util = { version = "0.7.10", features = ["rt"] }
 aes = "0.8.2"
 sha2 = "0.10.6"
 hkdf = { version = "0.12.3", features = ["std"] }
@@ -24,6 +24,10 @@ hmac = { version = "0.12.1", features = ["std"] }
 cbc = { version = "0.1.2", features = ["std", "alloc"] }
 p256 = { version = "0.13.2", features = ["ecdh"] }
 clap = { version = "4.3.0", features = ["derive"] }
+bluer = { version = "0.16.1", features = ["bluetoothd", "full"] }
+futures = "0.3.30"
+uuid = "1.7.0"
+tokio-stream = "0.1.14"
 
 [build-dependencies]
 prost-build = "0.11.9"
