--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ futures = "0.3.30"
 uuid = "1.7.0"
 tokio-stream = "0.1.14"
 thiserror = "1.0.56"
+hex-literal = "0.4.1"
 
 [build-dependencies]
 prost-build = "0.11.9"
