--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio-stream = "0.1.14"
 thiserror = "1.0.56"
 hex-literal = "0.4.1"
 openssl = "0.10.63"
+hostname = "0.3.1"
 
 [build-dependencies]
 prost-build = "0.11.9"
