--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,9 @@ bytes = "1.4.0"
 pnet = "0.33.0"
 portpicker = "0.1.1"
 prost = "0.11.9"
-zeroconf = "0.10.5"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
-tokio = { version = "1.28.0", features = ["full"] }
+tokio = { version = "1.28.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 aes = "0.8.2"
 cbc = { version = "0.1.2", features = ["std", "alloc"] }
@@ -28,6 +27,8 @@ thiserror = "1.0.56"
 hex-literal = "0.4.1"
 openssl = "0.10.63"
 hostname = "0.3.1"
+console-subscriber = "0.2.0"
+mdns-sd = "0.10.3"
 
 [build-dependencies]
 prost-build = "0.11.9"
