--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ openssl = "0.10.63"
 hostname = "0.3.1"
 console-subscriber = "0.2.0"
 mdns-sd = "0.10.3"
+num-bigint = "0.4.4"
 
 [build-dependencies]
 prost-build = "0.11.9"
