--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ hostname = "0.3.1"
 mdns-sd = "0.10.3"
 num-bigint = "0.4.4"
 anyhow = "1.0.79"
+flume = "0.11.0"
 
 [build-dependencies]
 prost-build = "0.12.3"
