--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,12 @@
     "configurations": [
         {
             "type": "lldb",
+            "request": "attach",
+            "name": "Attach",
+            "program": "${workspaceFolder}/target/debug/rustdrop"
+        },
+        {
+            "type": "lldb",
             "request": "launch",
             "name": "Debug executable 'rustdrop'",
             "cargo": {
