--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -13,10 +13,10 @@ pnet = "0.34.0"
 portpicker = "0.1.1"
 prost = "0.12.3"
 tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", optional = true }
 tokio = { version = "1.28.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
-clap = { version = "4.3.0", features = ["derive"] }
+clap = { version = "4.3.0", features = ["derive"], optional = true }
 bluer = { version = "0.17.0", features = ["bluetoothd", "full"] }
 uuid = "1.7.0"
 tokio-stream = "0.1.14"
@@ -24,13 +24,18 @@ thiserror = "1.0.56"
 hex-literal = "0.4.1"
 openssl = "0.10.63"
 hostname = "0.3.1"
-console-subscriber = "0.2.0"
+console-subscriber = { version = "0.2.0", optional = true }
 mdns-sd = "0.10.3"
 num-bigint = "0.4.4"
 anyhow = "1.0.79"
 flume = "0.11.0"
 dirs = "5.0.1"
+[features]
+simple = ["dep:tracing-subscriber", "dep:console-subscriber", "dep:clap"]
 
+[[bin]]
+name = "simple"
+required-features = ["simple"]
 [build-dependencies]
 prost-build = "0.12.3"
 
