--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["rustdrop_core"]
+members = ["rustdrop_core", "rustdrop_daemon"]
+[workspace.dependencies]
+tokio = { version = "1.28.0", features = ["full", "tracing"] }
+tracing = "0.1.37"
