--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -12,9 +12,9 @@ bytes = "1.4.0"
 pnet = "0.34.0"
 portpicker = "0.1.1"
 prost = "0.12.3"
-tracing = "0.1.37"
+tracing = { workspace = true }
 tracing-subscriber = { version = "0.3.17", optional = true }
-tokio = { version = "1.28.0", features = ["full", "tracing"] }
+tokio = { workspace = true, features = ["full", "tracing"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 clap = { version = "4.3.0", features = ["derive"], optional = true }
 bluer = { version = "0.17.0", features = ["bluetoothd", "full"] }
