--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -26,7 +26,7 @@ hostname = "0.3.1"
 console-subscriber = { version = "0.2.0", optional = true }
 mdns-sd = "0.10.3"
 num-bigint = "0.4.4"
-anyhow = "1.0.79"
+anyhow = { version = "1.0.79", features = ["backtrace"] }
 flume = "0.11.0"
 dirs = "5.0.1"
 uuid = "1.7.0"
