--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -30,6 +30,7 @@ anyhow = { version = "1.0.79", features = ["backtrace"] }
 flume = "0.11.0"
 dirs = "5.0.1"
 uuid = "1.7.0"
+async-trait = "0.1.77"
 [features]
 simple = ["dep:tracing-subscriber", "dep:console-subscriber", "dep:clap"]
 
