--- a/rustdrop_daemon/Cargo.toml
+++ b/rustdrop_daemon/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 ashpd = { version = "0.7.0", features = ["tokio", "tracing"], default-features = false }
-async-trait = "0.1.77"
+flume = "0.11.0"
 opener = "0.6.1"
 rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
 tokio.workspace = true
