--- a/rustdrop_gtk4/Cargo.toml
+++ b/rustdrop_gtk4/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
+async-stream = "0.3.5"
 flume = "0.11.0"
+futures-util = "0.3.30"
 glib = "0.19.0"
 gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12", "blueprint"] }
 rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
