--- a/rustdrop_daemon/Cargo.toml
+++ b/rustdrop_daemon/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ashpd = { version = "0.7.0", features = ["tokio", "tracing"], default-features = false }
+ashpd = { version = "0.7.0", features = [
+  "tokio",
+  "tracing",
+], default-features = false }
+console-subscriber = { version = "0.2.0", optional = true }
 flume = "0.11.0"
 opener = "0.6.1"
 rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
@@ -14,3 +18,6 @@ tokio.workspace = true
 tokio-stream = "0.1.14"
 tracing.workspace = true
 tracing-subscriber = "0.3.18"
+
+[features]
+console-subscriber = ["dep:console-subscriber"]
