Fix/remove tests

--- a/rustdrop_daemon/Cargo.toml
+++ b/rustdrop_daemon/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arboard = { version = "3.3.1", default-features = false }
 ashpd = { version = "0.7.0", features = [
   "tokio",
   "tracing",
