--- a/rustdrop_gtk4/Cargo.toml
+++ b/rustdrop_gtk4/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
 async-stream = "0.3.5"
+clap = "4.5.1"
 flume = "0.11.0"
 futures-util = "0.3.30"
 glib = "0.19.0"
