--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -9,11 +9,10 @@ edition = "2021"
 rand = "0.8.5"
 base64 = "0.21.0"
 bytes = "1.4.0"
-pnet = "0.34.0"
 portpicker = "0.1.1"
 prost = "0.12.3"
 tracing = { workspace = true }
-tokio = { workspace = true, features = ["full", "tracing"] }
+tokio = { workspace = true, features = ["net", "tracing"] }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 bluer = { version = "0.17.0", features = ["bluetoothd", "full"] }
 tokio-stream = "0.1.14"
