--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,16 @@
 resolver = "2"
 members = ["rustdrop_core", "rustdrop_daemon", "rustdrop_gtk4"]
 [workspace.dependencies]
-tokio = { version = "1.28.0", features = ["full", "tracing"] }
+tokio = { version = "1.28.0", features = [
+  "tracing",
+  "fs",
+  "rt-multi-thread",
+  "signal",
+], default-features = false }
 tracing = "0.1.37"
+futures = { version = "0.3.30", default-features = false, features = [
+  "std",
+  "alloc",
+] }
+tokio-util = "0.7.10"
+flume = "0.11.0"
