--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -9,13 +9,9 @@ edition = "2021"
 rand = "0.8.5"
 base64 = "0.21.0"
 bytes = "1.4.0"
-portpicker = "0.1.1"
 prost = "0.12.3"
 tracing = { workspace = true }
-tokio = { workspace = true, features = ["net", "tracing"] }
-tokio-util = { version = "0.7.10", features = ["rt"] }
 bluer = { version = "0.17.0", features = ["bluetoothd", "full"] }
-tokio-stream = "0.1.14"
 thiserror = "1.0.56"
 hex-literal = "0.4.1"
 openssl = "0.10.63"
@@ -28,7 +24,9 @@ dirs = "5.0.1"
 uuid = "1.7.0"
 infer = "0.15.0"
 async-stream = "0.3.5"
-futures-util = "0.3.30"
+futures = { workspace = true }
+tokio-util = { version = "0.7.10", features = ["rt"] }
+tokio.workspace = true
 
 [build-dependencies]
 prost-build = "0.12.3"
