--- a/rustdrop_daemon/Cargo.toml
+++ b/rustdrop_daemon/Cargo.toml
@@ -12,11 +12,11 @@ ashpd = { version = "0.7.0", features = [
   "tracing",
 ], default-features = false }
 console-subscriber = { version = "0.2.0", optional = true }
-flume = "0.11.0"
+flume = { workspace = true }
 opener = "0.6.1"
 rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
 tokio.workspace = true
-tokio-stream = "0.1.14"
+futures.workspace = true
 tracing.workspace = true
 tracing-subscriber = "0.3.18"
 
