--- a/rustdrop_gtk4/Cargo.toml
+++ b/rustdrop_gtk4/Cargo.toml
@@ -9,13 +9,13 @@ edition = "2021"
 adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
 async-stream = "0.3.5"
 clap = "4.5.1"
-flume = "0.11.0"
-futures-util = "0.3.30"
+flume = { workspace = true }
+futures = { workspace = true }
 glib = "0.19.0"
 gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12", "blueprint"] }
 rustdrop = { version = "0.1.0", path = "../rustdrop_core" }
-tokio = { version = "1", features = ["rt-multi-thread"] }
-tokio-util = "0.7.10"
+tokio = { workspace = true }
+tokio-util = { workspace = true }
 tracing-subscriber = "0.3.18"
 
 [build-dependencies]
