--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -18,7 +18,6 @@ openssl = "0.10.63"
 hostname = "0.3.1"
 mdns-sd = "0.10.3"
 num-bigint = "0.4.4"
-anyhow = { version = "1.0.79", features = ["backtrace"] }
 flume = "0.11.0"
 dirs = "5.0.1"
 uuid = "1.7.0"
@@ -27,6 +26,7 @@ async-stream = "0.3.5"
 futures = { workspace = true }
 tokio-util = { version = "0.7.10", features = ["rt"] }
 tokio.workspace = true
+modular-bitfield = "0.11.2"
 
 [build-dependencies]
 prost-build = "0.12.3"
