--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -11,7 +11,7 @@ base64 = "0.21.0"
 bytes = "1.4.0"
 prost = "0.12.3"
 tracing = { workspace = true }
-bluer = { version = "0.17.0", features = ["bluetoothd", "full"] }
+bluer = { version = "0.17.0", features = ["bluetoothd", "rfcomm"] }
 thiserror = "1.0.56"
 hex-literal = "0.4.1"
 openssl = "0.10.63"
