--- a/rustdrop_core/Cargo.toml
+++ b/rustdrop_core/Cargo.toml
@@ -28,10 +28,10 @@ tokio-util = { version = "0.7.10", features = ["rt"] }
 tokio.workspace = true
 modular-bitfield = "0.11.2"
 color-eyre = "0.6.2"
-
 [build-dependencies]
 prost-build = "0.12.3"
 
 [dev-dependencies]
 hex = "0.4.3"
 tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
+tracing-subscriber = { version = "0.3.18" }
